--- a/styles.css
+++ b/styles.css
@@ -3,9 +3,6 @@
     margin: 0;
     padding: 0;
     font-family: Arial, sans-serif;
-    text-decoration: none;
-    color: #333;
-    list-style: none;
 }
 
 header {
@@ -33,6 +30,7 @@ header {
 .header-links {
     color: #E5E7EB;
     font-size: 18px;
+    text-decoration: none;
 }
 
 .header-main {
@@ -126,6 +124,30 @@ header {
     font-weight: 700;
     color: #1F2937;
     padding: 40px;
+}
+
+.quote-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 0 16em;
+    background-color: #E5E7EB;
+    padding-top: 100px;
+    padding-bottom: 100px;
+}
+
+.main-quote {
+    font-size: 36px;
+    font-weight: 100;
+    font-style: italic;
+    color: #1F2937;
+}
+
+.quote-owner {
+    align-self: flex-end;
+    font-weight: 700;
+    font-size: 24px;
 }
 
 
