--- a/styles.css
+++ b/styles.css
@@ -67,6 +67,11 @@ header {
     margin-top: 15px;
 }
 
+.header-btn:hover {
+    background-color: #255fc4; 
+    color: #fff; 
+}
+
 .img-container {
     flex-shrink: 0;
     width: 50%;
@@ -124,6 +129,7 @@ header {
     font-weight: 700;
     color: #1F2937;
     padding: 40px;
+    margin-bottom: 10px;
 }
 
 .quote-container {
@@ -133,8 +139,8 @@ header {
     align-items: center;
     padding: 0 16em;
     background-color: #E5E7EB;
-    padding-top: 100px;
-    padding-bottom: 100px;
+    padding-top: 120px;
+    padding-bottom: 120px;
 }
 
 .main-quote {
@@ -149,6 +155,54 @@ header {
     font-weight: 700;
     font-size: 24px;
 }
+
+.signup-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 100px 0;
+}
+
+.signup-box {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #3882F6;
+    border-radius: 10px;
+    padding: 50px 180px;
+    gap: 8em;
+}
+
+.signup-main {
+    color: #E5E7EB;
+}
+
+.signup-btn {
+    background-color: #3882F6;
+    border: 1px solid #F9FAF8;
+    padding: 7px 1.5em;
+    cursor: pointer;
+    color: #F9FAF8;
+    border-radius: 8px;
+    font-size: 18px;
+    font-weight: bold;
+    margin-top: 15px;
+}
+
+.signup-btn:hover {
+    background-color: #255fc4; 
+    border-color: #F9FAF8; 
+    color: #fff; 
+}
+
+footer {
+    text-align: center;
+    background-color: #1F2937;
+    color: #F9FAF8;
+    padding: 40px;
+}
+
+
 
 
 
